#
# Process this file with automake to produce Makefile.in.
#
# $Id: Makefile.am,v 2.28 2010/11/14 15:08:17 rishitani Exp $
#

# AUTOMAKE_OPTIONS = 1.4 foreign

ACLOCAL_AMFLAGS = -I m4
# ACLOCAL_AMFLAGS = -I conftools

# perl

SUBDIRS = \
 expat \
 pcre \
 zlib \
 libpng \
 qlib \
 @BUILD_SCR@ \
 gfx \
 qsys \
 @BUILD_OSDEP@ \
 @BUILD_MODULES@ \
 @BUILD_CLI@ \
 @BUILD_XULGUI@ \
 utils \
$(NULL)
